frontend_tests/negative/non_function_call/go.mod
module example.com/renvotests/negative/non_function_call

go 1.25
